[FIX] *: fix ribbons position and size
This commit fixes the ribbons used in `kanban` and `form` views.

The SCSS uses the square root of the parent `div.ribbon` to calculate its
diagonal width and applies that width to the child `span`.

After changing the ribbon's transform-origin, we calculate the ribbon's
position based on CSS variables of the view's top padding,the height of
the ribbon and the shadow's size (to avoid it being cropped by
overflow-hidden).

By changing the values of a few of these variables in the kanban view,
we were able to remove all the specific SCSS related to ribbons in the
modules.

Other changes were applied inside some of the modules to make this
work:

- `event`: padding corrections on the kanban's cards;
- `hr_holidays: replaced `margin:0` in the SCSS with negative margin
utility classes on the element to achieve the same visual result;
- `discuss`: moved the ribbon to the parent element;
- this was also done to `discuss`, `survey` and `helpdesk`;
- `crm_team_view` in `sales_team`: the ribbon's height made it overflow
from the kanban's card. We fixed this by changing the value of one of
the CSS variables in the view's SCSS file;
- the same thing was done in `survey` and `appointment`;
- `website_event_exhibitor` had some SCSS that wasn't being used because
it uses `.o_ribbon` instead of `.ribbon`

task-2818586

--- a/addons/website_event_exhibitor/static/src/scss/event_templates_sponsor.scss
+++ b/addons/website_event_exhibitor/static/src/scss/event_templates_sponsor.scss
@@ -57,34 +57,6 @@
     margin: 0 -1px -1px 0;
     cursor: pointer;
 
-    .ribbon-wrapper {
-        width: 50px;
-        height: 50px;
-    }
-
-    .ribbon {
-        font: bold 10px Sans-Serif;
-        padding: 2px 0;
-        top: 10px;
-        width: 70px;
-        background-image: none; // not needed if colors for ribbons (Gold,Silver,Bronze) is removed in website_event_track.css
-
-        &.ribbon_Gold {
-            background-color: #e3aa24;
-            color:$white;
-        }
-
-        &.ribbon_Silver {
-            background-color: #adb5bd;
-            color: $white;
-        }
-
-        &.ribbon_Bronze {
-            background-color: #c7632a;
-            color: $white;
-        }
-    }
-
     &:before {
         content: "";
         display: block;
